# skole-scripts

./: .gitignore  README.md  codes.py  codes.txt  courses.yaml  create-courses-scripts.py  create_resource_file_fixtures.py  create_resource_fixtures.py  create_resource_scripts.py  download_digit_exams.py  full_type.py  modelit.txt  promo_cards.py  pyproject.toml  requirements.txt  resource-parts-script.py  resource-parts.txt
.circleci/: config.yml
.github/workflows/: ci.yml
importer/: templates.py
importer/abo_akademi/: create_subjects_and_courses.py  download_courses.py
importer/tuas/: create_subjects_and_courses.py  download_courses.py
importer/utu/: create_subjects_and_courses.py  download_courses.py
misc/: full_type.py
promo_card/: beta_codes.txt  make_promo_card_images.py
